tests/ui/traits/trait-upcasting/illegal-upcast-from-impl.next.stderr
error[E0282]: type annotations needed
  --> $DIR/illegal-upcast-from-impl.rs:13:18
   |
LL |     type Assoc = i32;
   |                  ^^^ cannot infer type for associated type `<T as Super>::Assoc`

error[E0308]: mismatched types
  --> $DIR/illegal-upcast-from-impl.rs:16:66
   |
LL | fn illegal(x: &dyn Sub<Assoc = ()>) -> &dyn Super<Assoc = i32> { x }
   |                                        -----------------------   ^ expected trait `Super`, found trait `Sub`
   |                                        |
   |                                        expected `&dyn Super<Assoc = i32>` because of return type
   |
   = note: expected reference `&dyn Super<Assoc = i32>`
              found reference `&dyn Sub<Assoc = ()>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
